--- a/app/index.html
+++ b/app/index.html
@@ -263,13 +263,13 @@
                 <form id="table1FilterForm" class="ibm-column-form" method="post">
                   <p class="ibm-form-elem-grp">
                     <label>Filter by:</label>
-                    <select id="table1Filter1" class="table1Filter" data-width="30%">
+                    <select id="table1Filter1" class="table1Filter filter" data-width="30%">
                       <option value="all" selected>Country (all)</option>
                     </select>
-                    <select id="table1Filter2" class="table1Filter" data-width="30%">
+                    <select id="table1Filter2" class="table1Filter filter" data-width="30%">
                       <option value="all" selected>Language (all)</option>
                     </select>
-                    <select id="table1Filter3" class="table1Filter" data-width="30%">
+                    <select id="table1Filter3" class="table1Filter filter" data-width="30%">
                       <option value="all" selected>Type (all)</option>
                     </select>
                   </p>
@@ -309,24 +309,24 @@
                 <form id="table2FilterForm" class="ibm-column-form" method="post">
                   <p class="ibm-form-elem-grp">
                     <label>Filter by:</label>
-                    <select id="table2FilterOp1" class="table2Filter" data-width="7%">
+                    <select id="table2FilterOp1" class="table2Filter filter" data-width="7%">
                       <option value="equal" selected>=</option>
                       <option value="notequal">≠</option>
                     </select>
-                    <select id="table2Filter1" class="table2Filter" data-width="20%">
+                    <select id="table2Filter1" class="table2Filter filter" data-width="20%">
                       <option value="all" selected>Theme (all)</option>
                     </select>
-                    <select id="table2FilterOp2" class="table2Filter" data-width="7%">
+                    <select id="table2FilterOp2" class="table2Filter filter" data-width="7%">
                       <option value="equal" selected>=</option>
                       <option value="notequal">≠</option>
                       <option value="more">>=</option>
                       <option value="less">
                         <=</option>
                     </select>
-                    <select id="table2Filter2" class="table2Filter" data-width="20%">
+                    <select id="table2Filter2" class="table2Filter filter" data-width="20%">
                       <option value="all" selected>Version (all)</option>
                     </select>
-                    <select id="table2Filter3" class="table2Filter" data-width="20%">
+                    <select id="table2Filter3" class="table2Filter filter" data-width="20%">
                       <option value="active" selected>Active themes</option>
                       <option value="all">All (active, inactive)</option>
                       <option value="inactive">Inactive themes</option>
@@ -396,21 +396,21 @@
                 <form id="table5FilterForm" class="ibm-column-form" method="post">
                   <p class="ibm-form-elem-grp">
                     <label>Filter by:</label>
-                    <select id="table5Filter1" class="table5Filter" data-width="20%">
+                    <select id="table5Filter1" class="table5Filter filter" data-width="20%">
                       <option value="all" selected>Plug-in (all)</option>
                     </select>
-                    <select id="table5Filter2" class="table5Filter" data-width="20%">
+                    <select id="table5Filter2" class="table5Filter filter" data-width="20%">
                       <option value="all" selected>Blog (all)</option>
                     </select>
-                    <select id="table5Filter3" class="table5Filter" data-width="15%">
+                    <select id="table5Filter3" class="table5Filter filter" data-width="15%">
                       <option value="active" selected>Active</option>
                       <option value="all">All (active, inactive)</option>
                       <option value="inactive">Inactive</option>
                     </select>
-                    <select id="table5Filter4" class="table5Filter" data-width="15%">
+                    <select id="table5Filter4" class="table5Filter filter" data-width="15%">
                       <option value="all" selected>Status (all)</option>
                     </select>
-                    <select id="table5Filter5" class="table5Filter" data-width="15%">
+                    <select id="table5Filter5" class="table5Filter filter" data-width="15%">
                       <option value="approved" selected>Approved</option>
                       <option value="all">All (approved, unapproved)</option>
                       <option value="unapproved">Unapproved</option>
@@ -466,16 +466,16 @@
                 <form id="table7FilterForm" class="ibm-column-form" method="post">
                   <p class="ibm-form-elem-grp">
                     <label>Filter by:</label>
-                    <select id="table7Filter1" class="table7Filter" data-width="20%">
+                    <select id="table7Filter1" class="table7Filter filter" data-width="20%">
                       <option value="all" selected>Page (all)</option>
                     </select>
-                    <select id="table7Filter2" class="table7Filter" data-width="20%">
+                    <select id="table7Filter2" class="table7Filter filter" data-width="20%">
                       <option value="all" selected>Blog (all)</option>
                     </select>
-                    <select id="table7Filter3" class="table7Filter" data-width="20%">
+                    <select id="table7Filter3" class="table7Filter filter" data-width="20%">
                       <option value="all" selected>Status (all)</option>
                     </select>
-                    <select id="table7Filter4" class="table7Filter" data-width="20%">
+                    <select id="table7Filter4" class="table7Filter filter" data-width="20%">
                       <option value="all" selected>Templates (all)</option>
                     </select>
                   </p>
@@ -504,18 +504,18 @@
                 <form id="table8FilterForm" class="ibm-column-form" method="post">
                   <p class="ibm-form-elem-grp">
                     <label>Filter by:</label>
-                    <select id="table8FilterOp1" class="table8Filter" data-width="7%">
+                    <select id="table8FilterOp1" class="table8Filter filter" data-width="7%">
                       <option value="equal" selected>=</option>
                       <option value="notequal">≠</option>
                     </select>
-                    <select id="table8Filter1" class="table8Filter" data-width="20%">
+                    <select id="table8Filter1" class="table8Filter filter" data-width="20%">
                       <option value="all" selected>Blog (all)</option>
                     </select>
-                    <select id="table8FilterOp2" class="table8Filter" data-width="7%">
+                    <select id="table8FilterOp2" class="table8Filter filter" data-width="7%">
                       <option value="equal" selected>=</option>
                       <option value="notequal">≠</option>
                     </select>
-                    <select id="table8Filter2" class="table8Filter" data-width="20%">
+                    <select id="table8Filter2" class="table8Filter filter" data-width="20%">
                       <option value="all" selected>Role (all)</option>
                       <option value="administrator">Administrators</option>
                       <option value="site_owner">Site Owners</option>
